# DKTParamSurfs

./: .gitignore  README.md
parameters/dkt/: HalfCylinder_Test.ini  OptDeformIsometryLin.ini  OptDeformIsometryNonLin.ini  OptDeformNonLin.ini  Plate_Test.ini  Saddle_Test.ini
parameters/dkt/exampleCircle/: Circle_BdrMiddle_constLoad.ini  ShellMatOpt_ExampleCircle1.ini  ShellMatOpt_ExampleCircle2.ini
parameters/dkt/exampleCylinder/: HalfCylinder_ChartPlate_BdrAll_centeredLoad.ini  HalfCylinder_ChartPlate_BdrTB_constLoad.ini  vtkPlotInterface_Cylinder.ini  vtkPlotInterface_Cylinder_Stress.ini  vtkPlotInterface_Cylinder_Undeformed.ini
parameters/dkt/examplePlate/: Plate_BdrAll_centeredLoad.ini  Plate_BdrAll_constLoad.ini  Plate_BdrL_constLoad.ini  vtkPlotInterface_Plate_BdrAll.ini  vtkPlotInterface_Plate_BdrL.ini  vtkPlotInterface_Plate_Stress.ini  vtkPlotInterface_Plate_Undeformed.ini
parameters/dkt/examplePlateLR/: ShellMatOpt_ExamplePlateLR1.ini
parameters/dkt/exampleQuadraticShape/: ShellMatOpt_ExampleQuad1.ini
parameters/dkt/exampleSphere/: HalfSphere_ChartCircle_BdrAll_centeredLoad.ini  HalfSphere_ChartCircle_BdrAll_constLoad.ini  HalfSphere_ChartCircle_BdrLR_constLoad.ini  vtkPlotInterface_HalfSphere.ini  vtkPlotInterface_HalfSphere_BdrLR.ini  vtkPlotInterface_HalfSphere_Stress.ini  vtkPlotInterface_HalfSphere_Undeformed.ini
parameters/vtk/: vtkPlotCell1D.ini  vtkPlotCell1DStress.ini  vtkPlotCell2DStress.ini  vtkPlotCell3D.ini  vtkPlotCell3DStress.ini  vtkPlotPlate.ini  vtkPlotPlateStress.ini
source/: CMakeLists.txt  cmake.selection.default  doxygen.conf
source/modules/pesoptDKTFE/: dktFEAdaptiveMesh.h  dktFEAdaptiveRefinement.h  dktFEBaseFunctionSets.h  dktFEBoundary.h  dktFEConfigurators.h  dktFEDefines.h  dktFEEvaluateCurvature.h  dktFEFunctionEvaluator.h  dktFEHandler.h  dktFEIntegrator.h  dktFEMaterialOptimizationDefines.h  dktFEMesh.h  dktFEMeshGenerator.h  dktFEMeshInfo.h  dktFEPlateElement.h  dktFEQuadrature.h  dktFEVTKPlotter.h  pesopt_DKT.h
source/modules/pesoptEnergies/: derivativeTest.h  energyDefines.h  expliciteFunction.h
source/modules/pesoptFE/: feAdaptiveRefinement.h  feBaseFunctionSet.h  feBoundaryHandler.h  feBoundaryIntegrator.h  feConfigurator.h  feDefines.h  feFunctionEvaluator.h  feIntegrator.h  feMaterialGenerator.h  feMeshGenerator.h  feQuadrature.h  pesopt_fe.h
source/modules/pesoptFE/pesoptQuocFE/: pesopt_quocFE.h  quocFEAdaptiveRefinement.h  quocFEBaseFunctionSets.h  quocFEBoundaryHandler.h  quocFEBoundaryIntegrator.h  quocFEConfigurators.h  quocFEDefines.h  quocFEElement.h  quocFEMesh.h  quocFEMeshGenerator.h  quocFEQuadrature.h  quocFESplineBaseFunctionSets.h  quocFESplineConfigurators.h
source/modules/pesoptFE/pesoptTriangleFE/: pesopt_triangleFE.h  triangleFEAdaptiveRefinement.h  triangleFEBaseFunctionSets.h  triangleFEBoundaryHandler.h  triangleFEConfigurators.h  triangleFEDefines.h  triangleFEElement.h  triangleFEMesh.h  triangleFEMeshGenerator.h  triangleFEQuadrature.h
source/modules/pesoptIO/: pesoptBoostIO.h  pesoptCoreIO.h  pesoptImageIO.h  pesoptLatexIO.h  pesopt_IO.h
source/modules/pesoptMatOpt/: matOptBoundaryHandler.h  matOptDefines.h  matOptEnergies.h  matOptMultipleLoad.h  matOptSolver.h  matOptTexPlotter.h  matOptVTKPlotter.h  pesopt_matOpt.h
source/modules/pesoptSolver/: lineSearchMethods.h  linearSystemSolver.h  solverInfo.h
source/modules/pesoptSolver/deprecated/: ahmedPGMRes.h  ahmedPGMRes_Quoc.h
source/modules/projects/dkt/elastDeform/: BashCompareThickness.cpp  ShellBucklingTikzPlotter.h  ShellDeformationEnergiesLin.h  ShellDeformationEnergiesNonLin.h  ShellIsometryConstraint.h  ShellOptimalDeformIsometryLinAdaptive.h  ShellOptimalDeformIsometryNonLinAdaptive.h  ShellOptimalDeformNonLinAdaptive.cpp  ShellOptimalDeformNonLinAdaptive.h  ShellOptimalDeformSolverInterfaceAdaptive.h  ShellOptimalDeformSolverIsometryLin.h  ShellOptimalDeformSolverIsometryNonLin.h
source/modules/projects/dkt/ersterVersuch/: ShellDeformationEnergiesSemiNonLin.h  ShellOptimalDeformIsometrySemiNonLinAdaptive.cpp  ShellOptimalDeformIsometrySemiNonLinAdaptive.h  ShellOptimalDeformSolverIsometrySemiNonLin.h  TestEnergiesSemiNonLin.cpp
source/projects/dkt/elastDeform/: CMakeLists.txt  ShellCurvature.h  ShellDeformationEnergiesInterfaces.h  ShellDeformationEnergiesNonLin.h  ShellForces.h  ShellIsometryConstraint.h  ShellOptimalDeformIsometryLinAdaptive.cpp  ShellOptimalDeformIsometryLinAdaptive.h  ShellOptimalDeformIsometryNonLinAdaptive.cpp  ShellOptimalDeformIsometryNonLinAdaptive.h  ShellOptimalDeformNonLinAdaptive.cpp  ShellOptimalDeformPlotter.cpp  ShellOptimalDeformSolverInterface.h  ShellOptimalDeformSolverInterfaceAdaptive.h  ShellOptimalDeformSolverIsometryLin.h
source/projects/dkt/ersterVersuch/: CMakeLists.txt  ShellDeformationEnergiesSemiNonLin.h  ShellOptimalDeformIsometrySemiNonLinAdaptive.cpp  ShellOptimalDeformIsometrySemiNonLinAdaptive.h  ShellOptimalDeformSolverIsometrySemiNonLin.h  TestEnergiesSemiNonLin.cpp
source/projects/dkt/paramSurfaces/: ShellBucklingTikzPlotter.h  ShellDeformationEnergiesLin.h  ShellDeformationEnergiesNonLin.h  ShellDeformationEnergiesSemiNonLin.h  ShellDeformationEnergiesSemiNonLin_old.h  ShellIntegrals.h  ShellIsometryConstraint.h  ShellOptimalDeformIsometrySemiNonLinAdaptive.h  ShellOptimalDeformSolverInterfaceAdaptive.h  ShellOptimalDeformSolverIsometryLin.h  ShellOptimalDeformSolverIsometryNonLin.h  ShellOptimalDeformSolverIsometrySemiNonLin.h  ShellOptimalDeformSolverNonLin.h  TestEnergiesSemiNonLin.cpp
source/util/: cmakeParseError.sh
